--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,45 @@
     "short_name": "Adoos Lite",
     "icons": [
         {
-            "src": "https://fede1608.github.io/mobilewebapp-sw-test/icon_adoos_vaquita.png",
-            "sizes": "128x128",
-            "type": "image/png"
-        }
+      "src": "/mobilewebapp-sw-test/img/logo-0-75x.png",
+      "sizes": "36x36",
+      "type": "image/png",
+      "density": 0.75
+    },
+    {
+      "src": "/mobilewebapp-sw-test/img/logo-1x.png",
+      "sizes": "48x48",
+      "type": "image/png",
+      "density": 1.0
+    },
+    {
+      "src": "/mobilewebapp-sw-test/img/logo-1-5x.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "density": 1.5
+    },
+    {
+      "src": "/mobilewebapp-sw-test/img/logo-2x.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "density": 2.0
+    },
+    {
+      "src": "/mobilewebapp-sw-test/img/logo-3x.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "density": 3.0
+    },
+    {
+      "src": "/mobilewebapp-sw-test/img/logo-4x.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": 4.0
+    }
     ],
     "gcm_sender_id": "190512441367",
     "gcm_user_visible_only": true,
-    "start_url": "/index.html",
+    "start_url": "/mobilewebapp-sw-test/index.html",
     "permissions": [
         "gcm"
     ],
